--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -6,6 +6,6 @@
         <label for="email">メールアドレス</label><input type="email" name="email" class="Form__input">
         <label for="password">パスワード</label><input type="password" name="password" class="Form__input">
         6~48文字
-        <input type="submit" value="登録">
+        <input type="submit" value="登録" class="Form__button">
     }
 }
