UIKitフレームワークのインストール

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,8 +17,8 @@
     </head>
     <body>
         @shared.header()
-        @* And here's where we render the `Html` object containing
-         * the page content. *@
-        @content
+        <div class="uk-container uk-container-center">
+            @content
+        </div>
     </body>
 </html>
