--- a/app/views/shared/header.scala.html
+++ b/app/views/shared/header.scala.html
@@ -1,7 +1,11 @@
-<header>
-    <h1><a href=@routes.HomeController.index()>Home</a></h1>
-    <ul>
-        <li><a href=@routes.RegisterController.create()>アカウント登録</a></li>
-        <li><a href=@routes.LoginController.index()>ログイン</a></li>
-    </ul>
-</header>
+<nav class="uk-navbar">
+    <div class="uk-container uk-container-center">
+        <a class="uk-navbar-brand" href=@routes.HomeController.index()>サービスの名前</a>
+        <div class="uk-navbar-flip">
+            <ul class="uk-navbar-nav">
+                <li><a href=@routes.RegisterController.create()>アカウント登録</a></li>
+                <li><a href=@routes.LoginController.index()>ログイン</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
