ログアウトルートの設定

--- a/app/views/shared/header.scala.html
+++ b/app/views/shared/header.scala.html
@@ -5,6 +5,7 @@
             <ul class="uk-navbar-nav">
                 <li><a href=@routes.RegisterController.create()>アカウント登録</a></li>
                 <li><a href=@routes.LoginController.index()>ログイン</a></li>
+                <li><a href=@routes.LoginController.logout()>ログアウト</a></li>
             </ul>
         </div>
     </div>
