--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -4,18 +4,6 @@
 @main("アカウント登録ページ") {
     <div class="uk-container-center uk-width-medium-1-3">
         <h1 class="uk-h2 uk-margin-top uk-margin-bottom">@title</h1>
-        @form(action = routes.RegisterController.create(), 'class -> "uk-panel uk-panel-box uk-form uk-form-horizontal") {
-            <div class="uk-form-row">
-                <label for="email" class="uk-form-label">メールアドレス</label>
-                <input type="email" name="email" class="uk-form-large uk-width-1-1" placeholder="sample@@mail.com">
-            </div>
-            <div class="uk-form-row">
-                <label for="password" class="uk-form-label">パスワード</label>
-                <input type="password" name="password" class="uk-form-large uk-width-1-1" placeholder="8~32文字">
-            </div>
-            <div class="uk-form-row">
-                <button type="submit" class="uk-button uk-button-primary uk-button-large uk-width-1-1">アカウント登録</button>
-            </div>
-        }
+        @shared.account(routes.RegisterController.create())
     </div>
 }
