--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,8 +1,7 @@
-@import helper._
-@(title: String)
+@(userForm: Form[UserModel])
 @main("ログインページ"){
     <div class="uk-container-center uk-width-medium-1-3">
-        <h1 class="uk-h2 uk-margin-top uk-margin-bottom">@title</h1>
-        @shared.account(routes.LoginController.login())
+        <h1 class="uk-h2 uk-margin-top uk-margin-bottom">ログインページ</h1>
+        @shared.account(routes.LoginController.login(), userForm)
     </div>
 }
