--- a/app/views/shared/header.scala.html
+++ b/app/views/shared/header.scala.html
@@ -1,4 +1,4 @@
-<nav class="uk-navbar">
+<nav class="Header">
     <div class="uk-container uk-container-center">
         <a class="uk-navbar-brand" href=@routes.HomeController.index()>サービスの名前</a>
         <div class="uk-navbar-flip">
