ユーザ登録機能

--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -1,4 +1,4 @@
-@(userForm: Form[UserModel])
+@(userForm: Form[UserFormModel])
 @main("アカウント登録ページ") {
     <div class="uk-container-center uk-width-medium-1-3">
         <h1 class="uk-h2 uk-margin-top uk-margin-bottom">アカウント登録</h1>
