--- a/app/views/shared/account.scala.html
+++ b/app/views/shared/account.scala.html
@@ -1,6 +1,6 @@
 @import play.api.mvc.Call
 @import helper.form
-@(endpoint: Call, userForm: Form[UserModel])
+@(endpoint: Call, userForm: Form[UserFormModel])
 
 @form(action = endpoint, 'class -> "uk-panel uk-panel-box uk-form uk-form-horizontal") {
     <div class="uk-form-row">
