--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,4 +1,4 @@
-@(userForm: Form[UserModel])
+@(userForm: Form[UserFormModel])
 @main("ログインページ"){
     <div class="uk-container-center uk-width-medium-1-3">
         <h1 class="uk-h2 uk-margin-top uk-margin-bottom">ログインページ</h1>
