--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -1,4 +1,4 @@
-@(users: Seq[UserModel2])
+@(users: Seq[UserModel])
 @main("ユーザ一覧ページ") {
     <table class="uk-table uk-table-hover uk-table-striped uk-table-condensed">
         <tr>
